remove [PLACEHOLDER] instances

--- a/WorkplaceAnalytics/toc.yml
+++ b/WorkplaceAnalytics/toc.yml
@@ -157,7 +157,7 @@
             href: MyAnalytics/Use/MyA-Adoption/Adopt-Habit-Change-Playbooks.md
         - name: Team adoption
           items: 
-          - name: MyAnalytics habit change program
+          - name: Get started
             href: MyAnalytics/Use/MyA-Adoption/Team-adopt-intro.md
           - name: Plan
             href: MyAnalytics/Use/MyA-Adoption/Team-adopt-plan.md
