--- a/WorkplaceAnalytics/toc.yml
+++ b/WorkplaceAnalytics/toc.yml
@@ -151,10 +151,10 @@
           items: 
           - name: Learning Modules
             href: MyAnalytics/Use/MyA-Adoption/Adopt-Learning-Modules.md
-          - name: Habit Change Method
-            href: MyAnalytics/Use/MyA-Adoption/Adopt-Habit-Change-Method.md
-          - name: Habit Change Playbooks
+          - name: Habit Playbooks
             href: MyAnalytics/Use/MyA-Adoption/Adopt-Habit-Change-Playbooks.md
+          - name: Habit Building Method
+            href: MyAnalytics/Use/MyA-Adoption/Adopt-Habit-Change-Method.md
         - name: Team adoption
           items: 
           - name: Get started
