--- a/WorkplaceAnalytics/toc.yml
+++ b/WorkplaceAnalytics/toc.yml
@@ -8,10 +8,16 @@
           href: ~/Overview/Environment-Requirements.md
        # - name: Architecture and How it Works
        #   href: ~/Overview/Architecture.md
-        - name: Privacy and data access
-          href: ~/Overview/Privacy-and-Data-Access.md
+       # - name: Privacy and data access
+       #   href: ~/Overview/Privacy-and-Data-Access.md
         - name: Get support
-          href: ~/Overview/Getting-Support.md
+          href: ~/Overview/Getting-Support.md 
+          - name: Data protection
+            items:
+            - name: Privacy and data access
+              href: ~/Overview/Privacy-and-Data-Access.md
+            - name: Data-protection considerations when using Workplace Analytics
+              href: ~/Overview/Data-protection-considerations.md
     - name: Setup
       items:
       - name: Checklist
