fixed broken TOC.yml

--- a/WorkplaceAnalytics/toc.yml
+++ b/WorkplaceAnalytics/toc.yml
@@ -12,12 +12,12 @@
        #   href: ~/Overview/Privacy-and-Data-Access.md
         - name: Get support
           href: ~/Overview/Getting-Support.md 
-          - name: Data protection
-            items:
-            - name: Privacy and data access
-              href: ~/Overview/Privacy-and-Data-Access.md
-            - name: Data-protection considerations when using Workplace Analytics
-              href: ~/Overview/Data-protection-considerations.md
+       #  - name: Data protection
+       #   items:
+        - name: Privacy and data access
+          href: ~/Overview/Privacy-and-Data-Access.md
+        - name: Data-protection considerations when using Workplace Analytics
+          href: ~/Overview/Data-protection-considerations.md
     - name: Setup
       items:
       - name: Checklist
