--- a/WorkplaceAnalytics/toc.yml
+++ b/WorkplaceAnalytics/toc.yml
@@ -6,25 +6,23 @@
       items:
         - name: Environment requirements
           href: ~/Overview/Environment-Requirements.md
-        - name: Privacy and data access
-          href: ~/Overview/Privacy-and-Data-Access.md
-        - name: Data-protection considerations
-          href: ~/Privacy/Data-protection-considerations.md
-       #  href: ~/Privacy/Data-protection-summary.md
         - name: Get support
           href: ~/Overview/Getting-Support.md
        # - name: Architecture and How it Works
        #   href: ~/Overview/Architecture.md
-       # - name: Privacy and data access
-       #   href: ~/Overview/Privacy-and-Data-Access.md
-       #  - name: Data protection
-       #   items:
+      - name: Privacy and data protection
+        items:
+          - name: Privacy considerations 
+            href: ~/Use/Privacy-considerations.md 
+          - name: Privacy and data access
+            href: ~/Overview/Privacy-and-Data-Access.md
+          - name: Data-protection considerations
+            href: ~/Privacy/Data-protection-considerations.md                       
+         #  href: ~/Privacy/Data-protection-summary.md
     - name: Setup
       items:
         - name: Set up Workplace Analytics
           href: ~/Setup/Set-up-Workplace-Analytics.md
-        - name: Privacy considerations 
-          href: ~/Use/Privacy-considerations.md
     - name: Use
       items:
       - name: Administration
