Added landing page to MyA adoption

--- a/WorkplaceAnalytics/toc.yml
+++ b/WorkplaceAnalytics/toc.yml
@@ -123,6 +123,7 @@
       - name: MyAnalytics Tips
         href: MyAnalytics/Overview/Tips.md
       - name: Adopt MyAnalytics
+        href: MyAnalytics/Use/MyA-Adoption/Adopt-myanalytics.md
         items:
         - name: Individual adoption
           items: 
