re-add the old prep & upload org data topic

--- a/WorkplaceAnalytics/toc.yml
+++ b/WorkplaceAnalytics/toc.yml
@@ -28,10 +28,10 @@
         items:
           - name: Workplace Analytics settings
             href: ~/Use/Settings.md
-          - name: Prepare organizational data
-            href: ~/Use/Prepare-organizational-data.md
-          - name: Upload organizational data
-            href: ~/Use/Upload-organizational-data.md            
+          - name: Prepare and upload organizational data
+            href: ~/Use/Prepare-and-upload-organizational-data.md
+        #  - name: Upload organizational data
+        #    href: ~/Use/Upload-organizational-data.md            
           - name: Data sources
             href: ~/Use/Data-Sources.md
         #  - name: User roles
