--- a/WorkplaceAnalytics/toc.yml
+++ b/WorkplaceAnalytics/toc.yml
@@ -2,12 +2,10 @@
   href: ~/index.md
   expanded: true
   items:
-    - name: Overview
-      items:
-        - name: Environment requirements
-          href: ~/Overview/Environment-Requirements.md
-        - name: Get support
-          href: ~/Overview/Getting-Support.md
+  #  - name: Overview
+  #    items:
+      #  - name: Environment requirements
+      #    href: ~/Setup/Environment-Requirements.md
        # - name: Architecture and How it Works
        #   href: ~/Overview/Architecture.md
     - name: Privacy and data protection
@@ -86,7 +84,9 @@
       - name: Known issues
         items:
           - name: Download a query report in UTF-8 format
-            href: ~/Tutorials/Download-UTF8-query-report.md  
+            href: ~/Tutorials/Download-UTF8-query-report.md
+      - name: Get support
+        href: ~/Overview/Getting-Support.md
 - name: MyAnalytics
   href: MyAnalytics/MyA-landing-page.md
   expanded: true
