--- a/WorkplaceAnalytics/toc.yml
+++ b/WorkplaceAnalytics/toc.yml
@@ -78,7 +78,7 @@
       href: ~/Overview/Getting-Support.md
 - name: MyAnalytics
   href: MyAnalytics/MyA-landing-page.md
-  homepage: /MyAnalytics  
+  homepage: /myanalytics  
   expanded: true
   items:   
     - name: Why use MyAnalytics?
@@ -105,7 +105,7 @@
         href: MyAnalytics/Overview/Tips.md    
       - name: Adopt MyAnalytics
         href: MyAnalytics/Use/MyA-Adoption/Adopt-myanalytics.md
-        homepage: /MyAnalytics/Use MyAnalytics/Adopt MyAnalytics    
+        homepage: /myanalytics/adopt-myanalytics/    
         items: 
         - name: Individual adoption
           items: 
@@ -139,10 +139,10 @@
           items: 
           - name: Learning modules
             href: MyAnalytics/Use/MyA-Adoption/Adopt-Learning-modules.md
-            homepage: /MyAnalytics/Use MyAnalytics/Adopt MyAnalytics/Habit resources/Learning modules
+            homepage: /myanalytics/use-myanalytics/adopt-myanalytics/habit-resources/learning-modules
           - name: Habit-building method
             href: MyAnalytics/Use/MyA-Adoption/Adopt-Habit-building-method.md
-            homepage: /MyAnalytics/Use MyAnalytics/Adopt MyAnalytics/Habit resources/Habit-building method
+            homepage: /myanalytics/use-myanalytics/adopt-myanalytics/Habit resources/habit-building-method
           - name: Habit playbooks
             href: MyAnalytics/Use/MyA-Adoption/Adopt-Habit-playbooks.md
-            homepage: /MyAnalytics/Use MyAnalytics/Adopt MyAnalytics/Habit resources/Habit playbooks
+            homepage: /myanalytics/use-myanalytics/adopt-myanalytics/habit-resources/habit-playbooks
