move mya privacy guide above setup

--- a/WorkplaceAnalytics/toc.yml
+++ b/WorkplaceAnalytics/toc.yml
@@ -83,10 +83,10 @@
   items:   
     - name: Why use MyAnalytics?
       href: MyAnalytics/Overview/Better-work-habits.md
+    - name: MyAnalytics privacy guide 
+      href: MyAnalytics/Overview/Privacy-Guide.md       
     - name: Setup
-      href: MyAnalytics/Setup/Mya-setup-checklist.md  
- #   - name: MyAnalytics welcome email 
- #     href: MyAnalytics/Setup/MyA-Welcome-email.md                  
+      href: MyAnalytics/Setup/Mya-setup-checklist.md                 
     - name: Frequently asked questions
       href: MyAnalytics/Overview/MyA-faq.md              
     - name: Use MyAnalytics
