--- a/WorkplaceAnalytics/toc.yml
+++ b/WorkplaceAnalytics/toc.yml
@@ -6,8 +6,8 @@
       items:
         - name: Environment requirements
           href: ~/Overview/Environment-Requirements.md
-        - name: Get support
-          href: ~/Overview/Getting-Support.md
+    #    - name: Get support
+    #      href: ~/Overview/Getting-Support.md
        # - name: Architecture and How it Works
        #   href: ~/Overview/Architecture.md
     - name: Privacy and data protection
@@ -62,14 +62,14 @@
             href: ~/Use/Understand-meeting-exclusions.md
           - name: Create custom meeting exclusion rules
             href: ~/Use/Create-custom-meeting-exclusions-rules.md
-      - name: Metrics
-        items:
-          - name: Metric definitions
-            href: ~/Use/metric-definitions.md
-          - name: Workplace Analytics glossary
-            href: ~/Use/Glossary.md
-          - name: Percentage and average calculations
-            href: ~/Use/Percentage-and-average-calculations.md
+    #  - name: Metrics
+    #    items:
+    #      - name: Metric definitions
+    #        href: ~/Use/metric-definitions.md
+    #      - name: Workplace Analytics glossary
+    #        href: ~/Use/Glossary.md
+    #      - name: Percentage and average calculations
+    #        href: ~/Use/Percentage-and-average-calculations.md
       - name: Tutorials
         items:
           - name: Query basics
@@ -79,7 +79,21 @@
           - name: Meeting queries
             href: ~/Tutorials/Meeting-queries.md
           - name: Group queries
-            href: ~/Tutorials/Group-queries.md
+            href: ~/Tutorials/Group-queries.md        
+      - name: Reference
+        items:
+          - name: Glossary
+            href: ~/Use/Glossary.md          
+          - name: Workplace Analytics metrics
+            href: ~/Use/metric-definitions.md
+          - name: Percentage and average calculations
+            href: ~/Use/Percentage-and-average-calculations.md
+    - name: Known issues
+      items:
+        - name: Download a query report in UTF-8 format
+          href: ~/Tutorials/Download-UTF8-query-report.md
+    - name: Get support
+      href: ~/Overview/Getting-Support.md
 - name: MyAnalytics
   href: MyAnalytics/MyA-landing-page.md
   expanded: true
