--- a/WorkplaceAnalytics/toc.yml
+++ b/WorkplaceAnalytics/toc.yml
@@ -2,10 +2,10 @@
   href: ~/index.md
   expanded: true
   items:
-    - name: Overview
-      items:
-        - name: Environment requirements
-          href: ~/Overview/Environment-Requirements.md
+  #  - name: Overview
+  #    items:
+  #      - name: Environment requirements
+  #        href: ~/Overview/Environment-Requirements.md
     #    - name: Get support
     #      href: ~/Overview/Getting-Support.md
        # - name: Architecture and How it Works
@@ -18,10 +18,8 @@
           href: ~/Overview/Privacy-and-Data-Access.md
         - name: Data-protection considerations (summary)                  
           href: ~/Privacy/Data-protection-summary.md
-    - name: Setup
-      items:
-        - name: Set up Workplace Analytics
-          href: ~/Setup/Set-up-Workplace-Analytics.md
+    - name: Set up Workplace Analytics
+      href: ~/Setup/Set-up-Workplace-Analytics.md
     - name: Use
       items:
       - name: Administration
