remove welcome email from toc

--- a/WorkplaceAnalytics/toc.yml
+++ b/WorkplaceAnalytics/toc.yml
@@ -110,8 +110,8 @@
           href: MyAnalytics/Use/email-digests.md
       - name: MyAnalytics tips
         href: MyAnalytics/Overview/Tips.md
-      - name: MyAnalytics welcome email
-        href: MyAnalytics/Use/MyA-Welcome-email.md        
+   #   - name: MyAnalytics welcome email
+   #     href: MyAnalytics/Use/MyA-Welcome-email.md        
       - name: Adopt MyAnalytics
         href: MyAnalytics/Use/MyA-Adoption/Adopt-myanalytics.md
         items: 
