--- a/WorkplaceAnalytics/toc.yml
+++ b/WorkplaceAnalytics/toc.yml
@@ -72,8 +72,8 @@
             href: ~/Tutorials/Person-queries.md
           - name: Meeting queries
             href: ~/Tutorials/Meeting-queries.md
-          - name: Group queries
-            href: ~/Tutorials/Group-queries.md        
+          - name: Group-to-group queries
+            href: ~/Tutorials/Group-to-group-queries.md        
       - name: Reference
         items:
           - name: Glossary
