minor edits to queries

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,6 @@ _repo.*/
 common/
 
 .openpublishing.buildcore.ps1
+WorkplaceAnalytics/Tutorials/Create-queries.md
+WorkplaceAnalytics/Tutorials/Group-to-group-queries.md
+WorkplaceAnalytics/Tutorials/Group-to-group-queries.md
