--- a/WorkplaceAnalytics/toc.yml
+++ b/WorkplaceAnalytics/toc.yml
@@ -73,9 +73,9 @@
           - name: Solutions
             href: ~/Tutorials/Solutions-intro.md  
             items: 
-              - name: Solutions walkthrough    
+              - name: Solutions - Walkthrough    
                 href: ~/Tutorials/Solutions-task.md                     
-              - name: Solutions concepts
+              - name: Solutions - Concepts
                 href: ~/Tutorials/Solutions-conceptual.md                                  
       - name: Reference
         items:
