--- a/WorkplaceAnalytics/toc.yml
+++ b/WorkplaceAnalytics/toc.yml
@@ -84,6 +84,9 @@
       items:
         - name: Download a query report in UTF-8 format
           href: ~/Tutorials/Download-UTF8-query-report.md
+        - name: Workplace Analytics tool 500 error
+          href: ~/Tutorials/Wpa-tool-500-error.md
+  
     - name: Get support
       href: ~/Overview/Getting-Support.md
 - name: MyAnalytics
