--- a/WorkplaceAnalytics/toc.yml
+++ b/WorkplaceAnalytics/toc.yml
@@ -124,7 +124,7 @@
           href: MyAnalytics/Use/add-in.md
         - name: Email digests
           href: MyAnalytics/Use/email-digests.md
-          name: MyAnalytics nudges
+        - name: MyAnalytics nudges
           href: MyAnalytics/Use/mya-notifications.md
       - name: MyAnalytics tips
         href: MyAnalytics/Overview/Tips.md    
