fix email digest in toc

--- a/WorkplaceAnalytics/toc.yml
+++ b/WorkplaceAnalytics/toc.yml
@@ -122,7 +122,7 @@
           href: MyAnalytics/Use/dashboard.md
         - name: Add-in
           href: MyAnalytics/Use/add-in.md
-        - name: Email digests
+        - name: Email digest
           href: MyAnalytics/Use/email-digests.md
         - name: MyAnalytics nudges
           href: MyAnalytics/Use/mya-notifications.md
